# CppTrace

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  bench.cpp  build_gif.py  build_mov.py  main  main.cpp  py_reqs.txt  render.mov  requirements.txt  scenes.h
images/: test.csv
jupyter/: analysis.ipynb
jupyter/.ipynb_checkpoints/: analysis-checkpoint.ipynb
lib/: CMakeLists.txt  Camera.h  Common.h  Hit.h  Image.h  OBJ_Loader.h  ProgressIndicator.h  Ray.h  Scene.h  Vec3.h  cpp_trace.cpp
lib/Hittable/: Hit.h  Hittable.h  HittableList.h  OBJ.h  Sphere.h  Triangle.h  hit.hpp  hittable.hpp  obj.hpp  sphere.hpp  triangle.hpp
lib/Hittable/Bounding/: AABB.h  BVH.h  bvh.hpp
lib/Hittable/Material/: Dielectric.h  Lambertian.h  Material.h  Metal.h  dielectric.hpp  emissive.hpp  lambertian.hpp  material.hpp  metal.hpp
lib/Hittable/materials/: isotropic.hpp
lib/Hittable/objects/: obj.hpp  rectangle.hpp  rectangular_prism.hpp  sphere.hpp  (+1 more)
lib/Primitive/: Circle.h  Primitive.h  Sphere.h
lib/Scene/: RandomGen.h  Scene.h  SceneTools.h  camera.hpp  cornell_box.hpp  image.hpp  random_gen.hpp  scene.hpp  scene_tools.hpp
lib/accelerators/: CMakeLists.txt  accelerators.hpp  bvh.hpp  fast_bvh.hpp  kd_tree.cpp  kd_tree.hpp  madman_bvh.hpp
lib/cli/: CMakeLists.txt  progress_indicator.hpp
lib/common/: CMakeLists.txt  common.hpp  ray.hpp  vec3.hpp
lib/hittable/: CMakeLists.txt  hit.hpp  hittable.hpp  hittable_list.hpp
lib/scene/: CMakeLists.txt  camera.hpp  cornell_box.hpp  image.hpp  random_gen.hpp  scene.hpp  scene_tools.hpp
scenes/: README.md  example.scene
(+26 files in other folders)
